--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,40 +15,40 @@
         android:theme="@style/Theme.MaterialComponents.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".PdfViewActivity"
+            android:name=".Activities.PdfViewActivity"
             android:exported="false" />
         <activity
-            android:name=".PdfDetailActivity"
+            android:name=".Activities.PdfDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".PdfEditActivity"
+            android:name=".Activities.PdfEditActivity"
             android:exported="false" />
         <activity
-            android:name=".PdfListAdminActivity"
+            android:name=".Activities.PdfListAdminActivity"
             android:exported="false" />
         <activity
-            android:name=".PdfAddActivity"
+            android:name=".Activities.PdfAddActivity"
             android:exported="false" />
         <activity
-            android:name=".CategoryAddActivity"
+            android:name=".Activities.CategoryAddActivity"
             android:exported="false" />
         <activity
-            android:name=".DashboardAdminActivity"
+            android:name=".Activities.DashboardAdminActivity"
             android:exported="false" />
         <activity
-            android:name=".DashboardUserActivity"
+            android:name=".Activities.DashboardUserActivity"
             android:exported="false" />
         <activity
-            android:name=".RegisterActivity"
+            android:name=".Activities.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".Activities.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".SplashActivity"
+            android:name=".Activities.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
