--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.MaterialComponents.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".TextViewActivity"
+            android:name=".Activities.TextViewActivity"
             android:exported="false" />
         <activity
             android:name=".Activities.HomeActivity"
