--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
         android:theme="@style/Theme.MaterialComponents.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".NoriCoinAddActivity"
+            android:exported="false"
+            android:label="@string/title_activity_nori_coin_add"
+            android:theme="@style/NoActionBar" />
+        <activity
             android:name=".Activities.FavoriteActivity"
             android:exported="false" />
         <activity
@@ -73,7 +78,6 @@
             android:exported="false" />
         <activity
             android:name=".Activities.SplashActivity"
-
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
