--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
+    <uses-permission android:name="com.android.vending.BILLING"/>
 
     <application
         android:name=".MyApplication"
@@ -16,9 +18,7 @@
         tools:targetApi="31">
         <activity
             android:name=".NoriCoinAddActivity"
-            android:exported="false"
-            android:label="@string/title_activity_nori_coin_add"
-            android:theme="@style/NoActionBar" />
+            android:exported="false"/>
         <activity
             android:name=".Activities.FavoriteActivity"
             android:exported="false" />
